@@ -19,3 +19,4 @@ require 'active_merchant/billing/gateways/data_cash'
 require 'active_merchant/billing/gateways/card_stream'
 require 'active_merchant/billing/gateways/psl_card'
 require 'active_merchant/billing/gateways/quickpay'
+require 'active_merchant/billing/gateways/realex'
